# SchedMeet

./: README.md  fake.py  package-lock.json  package.json
backend/: dependency.py  main.py  pyproject.toml
backend/endpoints/: admin.py  availability.py  calendar.py  hello.py
backend/endpoints/dydb/: admin_ddb.py  availability_ddb.py
backend/endpoints/helper/: retreive_user_info.py
backend/endpoints/models/: dynamo_models.py  fast_api_models.py  relational_models.py
backend/endpoints/psql/: admin_sql.py  availability_sql.py
backend/endpoints/utils/: timeUtils.py
frontend/: .eslintrc.js  index.html  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  constants.ts
frontend/src/Components/: Calendar.tsx  CreateEvent.tsx  EventComponent.tsx  HomePage.tsx  LoggedIn.tsx  NavBar.tsx  NotFoundPage.tsx
frontend/src/Components/utility/: DataStoreSwitch.tsx  InfoPanel.tsx  cellUtilities.tsx  copyTextField.tsx  customview.tsx
frontend/src/__mocks__/: zustand.ts
frontend/src/helpers/: gridMap.ts  timeUtils.ts
frontend/src/service/: mutation.ts  query.ts
frontend/src/stores/: authStore.tsx  availabilityStore.tsx  eventStore.tsx  newEventFormStore.tsx  newTimeStore.tsx
frontend/src/styles/: calendar-overrides.css
frontend/src/tests/: availabilityStore.test.ts
