[tool.poetry]
name = "schedtime-backend"
version = "0.1.0"
description = ""
authors = ["Faris Mohamed <faris@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
