[tool.poetry]
name = "schedtime-backend"
version = "0.1.0"
description = ""
authors = ["Faris Mohamed <faris@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
firebase-admin = "^5.2.0"
pynamodb = "^5.2.0"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"
alembic = "^1.7.6"
pynamodb-attributes = "^0.3.2"
click = "8.0.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
